tests/errors/syn.missing-rsquare.arr-size.or
main :: () -> void {
    arr := something[5;
};
